--- a/src/components/ChatbotComponent.css
+++ b/src/components/ChatbotComponent.css
@@ -31,25 +31,17 @@
 }
 
 .react-chatbot-kit-chat-bot-message {
-    background-color: white;
+    background-color: rgb(242, 242, 242);
     margin-left: 0%;
-    color: rgb(30, 30, 30);
+    color: black;
     max-width: 50vw;
     width: auto;
 }
 
 .react-chatbot-kit-chat-bot-message-arrow {
-    border-right: 8px solid white;
+    border-right: 8px solid lightgrey;
 }
 
 .react-chatbot-kit-chat-btn-send {
-    color: rgb(74, 100, 151);
-}
-
-#chatbot-loader #chatbot-loader-dot1 {
-    color: rgb(74, 100, 151);
-}
-
-.chatbot-loader-container {
     color: rgb(74, 100, 151);
 }
