--- a/src/components/ChatbotComponent.css
+++ b/src/components/ChatbotComponent.css
@@ -4,7 +4,7 @@
 }
 
 .react-chatbot-kit-chat-message-container {
-    height: auto;
+    height: 90%;
 }
 
 .react-chatbot-kit-chat-inner-container {
